adjust css code to remove overflow on smaller screen sizes (fix)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,7 +140,6 @@ hr{
   border-top: 5px solid #3a3a3a;
   width: 100%;
   margin: 5px 0;
-
 }
 
 .left-about-heading{
@@ -442,10 +441,14 @@ hr{
   color: var(--washed-blue);
 }
 
-@media (max-width: 568px) {
+@media screen and (max-width: 569px) {
   .gallery{
     width: 100%;
   }
+  .container, .container-fluid{
+    overflow: hidden;
+  }
+
 }
 
 /* footer styles */
@@ -455,5 +458,4 @@ hr{
   1px -1px 0 #000,
   -1px 1px 0 #000,
   1px 1px 0 #000;
-  font-size: 150%;
 }
